File Browser: Creating "New Folder" issues with too many existing folders in display #58715

Closed
opened 2018-12-04 14:27:47 +01:00 by user1 · 5 comments

Turn on "Recursion" to at least one level. When you create a new folder into one that is full of stuff, so most likely items with the first letter being "N" as in "New Folder" are outside the window border, you will not be able to see that new folder. So you also don't know if Blender waits for you to name it, or whatever. If you then want to scroll to it, Blender soon stops you from doing it and the cursor changes to the text input cursor (and you have to first hit esc or enter). Then you are allowed to go and search the folder to rename and open it. A bit cumbersome.
Solution: New Folder gets centered, waiting to be named. After confirming the name by hitting enter, Blender should open that folder instantly.

PS.: Maybe this behavior occurs even withot recursion, but i don't have such messy folders with dozens of items that wouldn't fit into the screen space of the browser.

Turn on "Recursion" to at least one level. When you create a new folder into one that is full of stuff, so most likely items with the first letter being "N" as in "New Folder" are outside the window border, you will not be able to see that new folder. So you also don't know if Blender waits for you to name it, or whatever. If you then want to scroll to it, Blender soon stops you from doing it and the cursor changes to the text input cursor (and you have to first hit esc or enter). Then you are allowed to go and search the folder to rename and open it. A bit cumbersome. Solution: New Folder gets centered, waiting to be named. After confirming the name by hitting enter, Blender should open that folder instantly. PS.: Maybe this behavior occurs even withot recursion, but i don't have such messy folders with dozens of items that wouldn't fit into the screen space of the browser.
Author

Added subscriber: @user1

Added subscriber: @user1

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-12-05 11:42:55 +01:00

I can confirm this is not related to recursive mode, can reproduce it with basic one-level one too (just make Blender window small enough to replicate this with a few dirs ;) ).

I can confirm this is not related to recursive mode, can reproduce it with basic one-level one too (just make Blender window small enough to replicate this with a few dirs ;) ).
Bastien Montagne changed title from File Browser: Creating "New Folder" issues with recursion to File Browser: Creating "New Folder" issues with too many existing folders in display 2018-12-05 11:43:20 +01:00

This issue was referenced by 8858311463

This issue was referenced by 8858311463b7220eef383781d31dde31868fcd7c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58715
No description provided.